# hackaton_bushe

./: .env-default  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
backend/: manage.py
backend/analitics/: way_bill_worker.py
backend/analytics/: way_bill_worker.py
backend/backend/: settings.py  urls.py
backend/bot/: courier.py  main.py
backend/web/: admin.py  models.py  urls.py
backend/web/management/commands/: delete.py  seed.py
backend/web/migrations/: 0001_initial.py  0002_rename_lat_hub_address_lat_and_more.py  0003_order_customer_name_order_customer_phone_and_more.py  0004_courier_telegram_id.py  0005_courier_hub_alter_courier_telegram_id.py  0006_waybill_status_alter_courier_status.py  0007_alter_hub_address_string_alter_hub_name.py  0008_remove_hubworkhours_hub_and_more.py  0009_hub_logo_alter_waybillorder_waybill.py  0010_order_hub_alter_orderhistory_event_and_more.py  0011_waybill_number.py  0012_order_number.py
backend/web/serializers/: courier.py  hub.py  order.py  waybill.py
backend/web/views/: courier.py  hub.py  order.py  waybill.py
bot/: courier.py
frontend/: .prettierrc  index.html  package.json
frontend/src/: App.jsx  styles.css
frontend/src/components/: HubBox.jsx
frontend/src/containers/: Logo.jsx
frontend/src/containers/Home/: Home.jsx
frontend/src/containers/Hub/: Control.jsx  Couriers.jsx  Hub.jsx  Orders.jsx  Routes.jsx  useItems.jsx  useSelected.jsx
frontend/src/containers/HubList/: HubCreateButton.jsx  HubCreateModal.jsx  (+1 more)
frontend/src/hooks/: http.hook.js
frontend/src/utils/: axios.js
