[tool.poetry]
name = "hakaton"
version = "0.1.0"
description = ""
authors = ["alexeymyakinin <alexeymyakinin@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.98.0"
typer = "^0.9.0"
uvicorn = "^0.22.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

